--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(to right, #4facfe, #00f2fe);
+      background: linear-gradient(to right, #b84ffe, #6a00fe);
       color: white;
       text-align: center;
     }
     .section {
       padding: 80px 0;
     }
-  </style>
+  </style>   
 </head>
 <body>
 
@@ -60,8 +60,8 @@
           <img src="images/myphoto.jpg" class="rounded-circle img-fluid" alt="Your Photo">
         </div>
         <div class="col-md-8">
-          <p>Hey! I’m Chandan — a curious mind from Karnataka who’s just as comfortable tweaking code as I am getting my hands on the farm. I’m all about learning new things, building cool stuff, and using tech to make life better.</p>
-          <p>I’m currently pursuing a Bachelor's in Data Science, with a strong interest in web development, AI, and solving real-world problems through data. I’ve been working with tools like Python, HTML, Bootstrap, and exploring statistical concepts.</p>
+          <p>Hey! I’m Chandan — a curious mind,who just does tweaking code comfortably. I’m all about learning new things, building cool stuff, and using tech to make life better.</p>
+          <p>I’m currently pursuing Bachelor's in Data Science, with a strong interest in DS, Machine Learning, web development, AI, and solving real-world problems through data. I’ve been working with tools like Python, HTML, Bootstrap, and exploring statistical concepts.</p>
           <p>Outside the classroom, I’m a farmer and an aspiring entrepreneur. My goal? To create impactful, AI-driven tools — building smart solutions that empower, not just impress.</p>
           <p>Whether it’s a solo project or a team hustle, I’m always up for a challenge. Let’s connect and build something meaningful together! 🚀</p>
         </div>
@@ -98,7 +98,7 @@
           </div>       
           <div class="card-body">
             <h5 class="card-title">AgriGenius</h5>
-            <p class="card-text">An AI-powered assistant for farmers with features like crop disease detection, weather insights, and market trends. Building with rural empowerment in mind.</p>
+            <p class="card-text">An AI-powered assistant for farmers with features like crop disease detection, weather insights, a chatbot and market trends. Building with rural empowerment in mind.</p>
           </div>
         </div>
       </div>
@@ -154,7 +154,6 @@
   <footer class="bg-dark text-white text-center p-3">
     &copy; 2025. Chandan all rights reserved 
   </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html> 
